# GPU

./: .clangd  .gitignore  CMakeLists.txt  Makefile
apps/cli/: CMakeLists.txt
apps/cli/include/cli/: main.hpp  program_args.hpp  sanity.hpp
apps/cli/source/: loader.hpp  main.cpp  program_args.cpp  solver_main.cpp
libcgm/: CMakeLists.txt
libcgm/include/cgm/: cgm.h  cpu_runner.hpp  cu_math.cuh  cuda_runner.cuh  runner.hpp  sanity.cuh  traits.cuh
libcgm/prototype/.ipynb_checkpoints/: cgm-checkpoint.py
libcgm/source/: cpu_runner.cpp  cuda_runner.cu  runner.cpp
libcgm/tests/: CMakeLists.txt  little_bit_of_indirection.cu  little_bit_of_indirection.cuh  matrix_tests.cpp  vector_tests.cpp
libcsr/: CMakeLists.txt
libcsr/include/csr/: forward.hpp  matrix.hpp  traits.hpp  utils.hpp
libcsr/tests/: CMakeLists.txt  matrix_tests.cpp  vector_tests.cpp
libgcm/: CMakeLists.txt
libgcm/include/gcm/: gcm.hpp
libgcm/source/: gcm.cpp
playground/: playground.cu  utils.cuh
report/: citations.bib  main.tex
scripts/: analysis.ipynb  bench.py  bench.txt  bench_1.txt  bench_32.txt  bench_32spmv.txt  bench_combined.txt  bench_cpu.txt  bench_old.txt  bench_stride.txt  matgen.py
